# synquid

./: .gitignore  .hgeol  .hgignore  LICENSE  Main.hs  README.md  Tests.hs  stack.yaml  synquid.cabal  todo.txt
Synquid/: ConstraintGenerator.hs  Explorer.hs  Logic.hs  Pretty.hs  Program.hs  SMTSolver.hs  Solver.hs  Synthesizer.hs  TemplateGenerator.hs  Util.hs  Z3.hs
benchmarks/: AVL-BalLR.sq  AVL-BalRL.sq  BST-Delete.sq  BST-Member.sq  BST-MergePivot.sq  BST-Sort.sq  BinHeap-Insert.sq  Evaluator-Vars.sq  Evaluator.sq  IncList-GHCSortMergeAll.sq  IncList-GHCSortSequence.sq  IncList-Insert.sq  IncList-InsertSort.sq  IncList-Merge.sq  IncList-MergeSort.sq  IncList-PivotAppend.sq  IncList-QuickSort.sq  Int-Max-Abstract.sq  List-Append.sq  List-Compress.sq  List-Concat.sq  List-CrossProduct.sq  List-Delete.sq  List-Drop.sq  List-Elem.sq  List-HOConcat.sq  List-Map.sq  List-Nub.sq  List-Null.sq  List-Partition.sq  List-Product.sq  List-Replicate.sq  List-Split.sq  List-Stutter.sq  List-Take.sq  List-ToNat.sq  List-Zip.sq  List-ZipWith.sq  RBT'-Balance.sq  RBT'-BalanceL.sq  (+10 more)
benchmarks/abstract/: IncList-Insert.sq  Int-Max.sq  List-Fold.sq  List-Reverse.sq  RBT-Balance.sq  RBT-BalanceL.sq  RBT-BalanceR.sq  RBT-Constructors.sq  RBT-Ins.sq  RBT-Ins2.sq
benchmarks/checking/: AVL.sq  HigherOrder.sq  List-Append.sq  List-Replicate.sq  List-ToNat.sq
benchmarks/current/: BST-Delete.sq  BST-DeleteMin.sq  BST-Insert.sq  BST-Member.sq  BST-Sort.sq  BinHeap-Insert.sq  BinHeap-Member.sq  Evaluator.sq  IncList-InsertSort.sq  IncList-Merge.sq  IncList-MergeSort.sq  IncList-PivotAppend.sq  Int-Max3.sq  Int-Max5.sq  List-Compress.sq  List-Delete.sq  List-Drop.sq  List-Elem.sq  List-Fold-Length.sq  List-Fold.sq  List-InsertSort-Fold.sq  List-InsertSort.sq  List-Nub.sq  List-Null.sq  List-Product.sq  List-Replicate.sq  List-Split.sq  List-Take.sq  List-ToNat.sq  List-Zip.sq  Tree-Elem.sq  Tree-Flatten.sq  UniqueList-Delete.sq  UniqueList-Insert.sq  run_all.py
benchmarks/paper/: BST-Delete.sq  BST-Insert.sq  BinHeap-Member.sq  BinHeap-Singleton.sq  BinHeap-Tripleton.sq  Evaluator.sq  IncList-Insert.sq  IncList-Merge.sq  IncList-MergeSort.sq  IncList-PivotAppend.sq  IncList-QuickSort.sq  Int-Add.sq  Int-Max3.sq  Int-Max4.sq  Int-Max5.sq  List-Append.sq  List-Compress.sq  List-Concat.sq  List-Delete.sq  List-Drop.sq  List-Elem.sq  List-Fold-Append.sq  List-Fold-Length.sq  List-Foldr.sq  List-Length.sq  List-Map.sq  List-Nub.sq  List-Null.sq  List-Product.sq  List-Replicate.sq  List-Reverse.sq  List-Snoc.sq  List-Split.sq  List-Stutter.sq  List-Zip.sq  List-ZipWith.sq  RBT-Balance.sq  RBT-BalanceL.sq  RBT-Constructors.sq  RBT-Ins.sq  (+12 more)
benchmarks/security/: AccessControl.sq  DataFlow.sq  Location.sq
benchmarks/unfinished/: AVL-BalL0.sq  AVL-BalLL.sq  AVL-BalR0.sq  AVL-BalRR.sq  AVL-Member.sq  IncList-GHCSortAscending-Int.sq  IncList-GHCSortSort.sq  RBT-BalanceLStrong.sq  RBT-BalanceR.sq  RBT-Insert.sq
benchmarks/unit/: TypeAbduction.sq
src/: Main.hs  Synquid.hs
src/Synquid/: Codegen.hs  Error.hs  Explorer.hs  HornSolver.hs  HtmlOutput.hs  Logic.hs  Parser.hs  PolicyChecker.hs  Pretty.hs  Program.hs  Resolver.hs  SMTSolver.hs  Solver.hs  SolverMonad.hs  Stats.hs  Synthesizer.hs  Tokens.hs  Type.hs  TypeChecker.hs  TypeConstraintSolver.hs  Util.hs  Z3.hs
test/: Prelude.sq  Tests.hs  merge_tables.py  run_all.py  run_tests.py
test/checking/: AVL-no-elems.sq  AVL.sq  List-Append.sq  oracle
test/comcom/: AVL.sq  EDAS.sq  List-Reverse.sq  List-ToNat.sq  RunLength.sq
test/conference/: ConferenceRepair.sq  ConferenceVerification.sq  conference.cabal  count-lines.sh
test/current/: BST-Delete.sq  BST-ExtractMin.sq  BST-Sort.sq  BV-add.sq  BV-dec.sq  BV-inc.sq  BinHeap-Member.sq  IncList-MergeSort.sq  IncList-QuickSort.sq  Int-Add.sq  List-All.sq  List-Append.sq  List-Drop.sq  List-Elem.sq  List-ExtractMin.sq  List-Filter.sq  List-Fold-Sort.sq  List-InsertSort.sq  List-Intersection.sq  List-Null.sq  List-Partition.sq  List-Range.sq  List-Replicate.sq  List-Snoc.sq  List-Split.sq  List-Take.sq  List-Zip.sq  List-ZipWith.sq  Replicate-Examples.sq  UniqueList-Delete.sq  UniqueList-Range.sq  oracle
test/demo/: AST-NegationNF.sq  BST-Insert.sq  Compiler2.sq  Fold-Sort.sq  List-Replicate.sq  NNF.sq  oracle
test/gradr/: gradr.sq  run-all.sh
test/health/: run-all.fish
test/job-talk/: AST-DesugarBool.sq  AST-DesugarBool2.sq  AST-NegationNF2.sq  BDD-And.sq  BDD-Make.sq  BDD-Not.sq  BDD-Or.sq  BST-Sort.sq  List-Elem.sq  List-ElemIndex.sq  List-Fold-Sort.sq  List-MergeSort.sq  List-Reverse.sq  RBT-Insert.sq  RunLen-Decode.sq  RunLen-Encode.sq  UniqueList-Range.sq  run_all.py
test/microbenchmarks/: 01-EDAS.sq  02-Multiple.sq  04-Search.sq  05-Sort.sq  06-Broadcast.sq  07-HotCRP.sq  08-AirBnB.sq  run-all.sh
test/paper/: AVL-Balance.sq  AVL-Delete.sq  AVL-ExtractMin.sq  AVL-Insert.sq  AddressBook-Merge.sq  BST-Insert.sq  BST-Sort.sq  BinHeap-Doubleton.sq  BinHeap-Insert.sq  BinHeap-Singleton.sq  BinHeap-Tripleton.sq  IncList-InsertSort.sq  IncList-Merge.sq  IncList-MergeSort.sq  Int-Max2.sq  List-Compress.sq  List-Delete.sq  List-Drop.sq  List-ElemIndex.sq  List-ExtractMin.sq  List-Ith.sq  List-Map.sq  List-Partition.sq  List-Replicate.sq  List-SelectSort.sq  List-Split.sq  List-Stutter.sq  List-Take.sq  List-ToNat.sq  RBT-BalanceL.sq  RBT-BalanceR.sq  RBT-Insert.sq  StrictIncList-Delete.sq  StrictIncList-Insert.sq  StrictIncList-Intersect.sq  Tree-Elem.sq  UniqueList-Delete.sq  UniqueList-Insert.sq  run_all.py  solutions
test/pldi16/: AVL-Delete.sq  AVL-ExtractMin.sq  AVL-RotateL.sq  AVL-RotateR.sq  AddressBook-Make.sq  BST-Delete.sq  BST-Member.sq  BinHeap-Doubleton.sq  BinHeap-Member.sq  Evaluator.sq  IncList-Insert.sq  List-Append.sq  List-Concat.sq  List-Delete.sq  List-Drop.sq  List-Fold-Append.sq  List-InsertSort.sq  List-Ith.sq  List-Nub.sq  List-Null.sq  List-Partition.sq  List-QuickSort.sq  List-Snoc.sq  List-Stutter.sq  RBT-BalanceL.sq  RBT-Insert.sq  StrictIncList-Delete.sq  StrictIncList-Insert.sq  Tree-BalancedReplicate.sq  Tree-Count.sq  Tree-ToList.sq  UniqueList-Delete.sq  results  (+4 more)
(+301 files in other folders)
