name:                 synquid
version:              0.4
synopsis:             Program Synthesis from Refinement Types
description:          Synquid is a simple functional programming language with refinement types.
                      In Synquid the programmer must provide the type signature for each top-level function,
                      but can leave parts (or all) of the implementation out for the system to fill in.
license:              MIT
license-file:         LICENSE
author:               Nadia Polikarpova
maintainer:           nadia.polikarpova@gmail.com
category:             Language
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

flag synquid
  Description: Build the synquid executable
  Default:     True

executable synquid
  main-is:            Synquid.hs
  
  other-modules:      Synquid.Error
                    , Synquid.HtmlOutput
                    , Synquid.Logic
                    , Synquid.Parser
                    , Synquid.Pretty
                    , Synquid.Program
                    , Synquid.Resolver
                    , Synquid.SolverMonad
                    , Synquid.HornSolver
                    , Synquid.TypeConstraintSolver
                    , Synquid.Explorer
                    , Synquid.Synthesizer
                    , Synquid.TypeChecker
                    , Synquid.Tokens
                    , Synquid.Type
                    , Synquid.Util
                    , Synquid.Z3  

  other-extensions:   TemplateHaskell
                    , Rank2Types
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , FlexibleContexts

  build-depends:      base >=4.6
                    , containers >=0.5
                    , mtl >=2.2
                    , transformers >=0.3
                    , transformers-compat >=0.4
                    , lens >=3.7
                    , ansi-wl-pprint >=0.6
                    , ansi-terminal >=0.6
                    , html >=1
                    , bimap >= 0.2
                    , z3 > 4.0
                    , logict >= 0.5
                    , parsec >= 3.1
                    , indents >= 0.3
                    , cmdargs >=0.10
                    , filepath
                    , time
                    , haskell-src-exts >= 1.17
                    , safe
                    , split

  ghc-options: -O2

  hs-source-dirs:     src
  default-language:   Haskell2010
  If !flag(synquid)
    buildable: False
