name:                 conference
version:              0.1
synopsis:             Example
description:          Example
-- license:
-- license-file:         LICENSE
author:               Nadia Polikarpova
maintainer:           nadia.polikarpova@gmail.com
category:             Language
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

executable confmain
  main-is:            ConferenceMain.hs

  other-extensions:   TemplateHaskell

  build-depends:      base >=4.6 && <4.9
                    , containers >=0.5 && <0.6
                    , lens >=3.7
                    , cmdargs ==0.10.*
                    , time
                    , safe
                    , text
                    , split
                    , sqlite-simple

  default-language:   Haskell2010
